--- a/src/app/register/register.page.html
+++ b/src/app/register/register.page.html
@@ -19,7 +19,7 @@
 <br>
 <ion-input label="Прізвище *" type="text" label-placement="floating" fill="solid" placeholder="Ваше прізвище" name="lastname" [(ngModel)]="reg_lastname"></ion-input>
 <br>
-<ion-input label="Телефон *" type="number"  [maskito]="phoneMask" [maskitoElement]="maskPredicate"  placeholder="+380 12 345 67 39" label-placement="floating" fill="solid" placeholder="Ваш телефон" name="phone" [(ngModel)]="reg_phone"></ion-input>
+<ion-input label="Телефон *" type="tel" [maskito]="phoneMask" [maskitoElement]="maskPredicate"  placeholder="+380 12 345 67 39" label-placement="floating" fill="solid" placeholder="Ваш телефон" name="phone" [(ngModel)]="reg_phone"></ion-input>
 <br>
 <ion-input label="Email" type="email" label-placement="floating" fill="solid" placeholder="Email" name="email" [(ngModel)]="reg_email"></ion-input>
 <br>
