--- a/src/app/tab5/tab5.page.scss
+++ b/src/app/tab5/tab5.page.scss
@@ -130,3 +130,9 @@ ion-label.date-time-line .selected-time {
     margin: auto;
     text-align: center;
 }
+.image-centered {
+    text-align: center;
+}
+.zastava-desc p, .zastava-desc ul {
+    text-align: left;
+}
