Icons and buttons

--- a/src/app/account-address/account-address.page.html
+++ b/src/app/account-address/account-address.page.html
@@ -5,7 +5,7 @@
     </ion-buttons>
     <ion-title>Мої адреси</ion-title>
     <ion-buttons slot="end">
-    <ion-button fill="solid" (click)="addAddress()" size="small" color="primary">Додати
+    <ion-button fill="solid" (click)="addAddress()" size="small" shape="round" color="primary">Додати
       <ion-icon name="add-circle-outline" slot="end"></ion-icon>
     </ion-button>
   </ion-buttons>
