--- a/src/app/tab3/tab3.page.scss
+++ b/src/app/tab3/tab3.page.scss
@@ -29,3 +29,4 @@ ion-item.item.md.item-lines-default.item-fill-none.in-list.hydrated.item-label {
 .item-inner {
     display: none !important;
 }
+has-focus.input-fill-solid.ion-valid.sc-ion-input-md-h {--border-color:black}
