--- a/src/app/tab5/tab5.page.scss
+++ b/src/app/tab5/tab5.page.scss
@@ -136,3 +136,7 @@ ion-label.date-time-line .selected-time {
 .zastava-desc p, .zastava-desc ul {
     text-align: left;
 }
+ion-icon {
+    margin-right: 10px;
+}
+
