--- a/src/app/tab5/tab5.page.html
+++ b/src/app/tab5/tab5.page.html
@@ -3,12 +3,12 @@
     <ion-title><ion-icon name="basket-outline"></ion-icon> Оформлення замовлення</ion-title>
   </ion-toolbar>
 </ion-header>
-<ion-content [fullscreen]="true" color="light">
+<ion-content [fullscreen]="true">
   <ion-refresher slot="fixed" (ionRefresh)="handleRefresh($event)">
      <ion-refresher-content></ion-refresher-content>
    </ion-refresher>
 
-  <ion-list [inset]="true" *ngIf="showEmptyMsg == false">
+  <ion-list  *ngIf="showEmptyMsg == false">
     <ion-list-header>
       <ion-label><b>Товари</b></ion-label>
     </ion-list-header>
@@ -48,11 +48,12 @@
         </ion-item-options>
       </ion-item-sliding>
 
-      <ion-list [inset]="true">
+      <ion-list>
         <ion-list-header>
         <ion-label><b>Адреса</b></ion-label>
       </ion-list-header>
       <ion-item *ngFor="let address of addresses">
+        <ion-icon name="home-outline"  color="primary"></ion-icon>
         <ion-label class="address-line">
           <div class="name">{{ address.short }}</div>
           <div class="check"><ion-toggle aria-label="address.short" (click)="changeDefaultAddress(address.address_id)" [checked]="isDefaultAddress(address.address_id)"></ion-toggle></div>
@@ -72,41 +73,55 @@
       <ion-label><b>Оплата</b></ion-label>
     </ion-list-header>
     <ion-item *ngFor="let payment of payments">
+      <ion-icon name="card-outline" color="primary"></ion-icon>
       <ion-label class="address-line">
+        
         <div class="name">{{ payment.name }}</div>
         <div class="check"><ion-toggle aria-label="payment.name" (click)="changePayment(payment.payment_id)" [checked]="isSelectedPayment(payment.payment_id)"></ion-toggle></div>
       </ion-label>
     </ion-item>
     <!--Next row-->
-
+    <ion-list-header>
+      <ion-label><b>Додатково</b></ion-label>
+    </ion-list-header>
     <ion-item *ngIf="time_periods != false">
+      <ion-icon name="calendar-outline" color="primary"></ion-icon> 
       <ion-label (click)="setDateAndTime()" class="date-time-line">
-        <div><ion-icon name="calendar-outline"></ion-icon> Дата та час</div>
+       
+        <div>Дата та час</div>
         <div class="selected-time">{{ selected_date_and_time }}</div>
       </ion-label>
     </ion-item>
     <!--Next row-->
-    <ion-item>
-      <ion-textarea [(ngModel)]="comment" label="Додати коментар" placeholder=""></ion-textarea>
+    <ion-item >
+     
+      <ion-textarea style="display: flex; align-items: center;" [(ngModel)]="comment"  placeholder="Додати коментар"> <ion-icon name="chatbox-outline" style="font-size: 24px;"  color="primary"></ion-icon></ion-textarea>
     </ion-item>
     <!--Next row-->
     <ion-item>
+      <ion-icon name="hand-left-outline" color="primary"></ion-icon>
       <ion-label class="address-line">
+        
         <div class="name">Безконтактна доставка</div>
         <div class="check"><ion-toggle aria-label="" (ionChange)="noContactShipping()" [checked]="is_no_contact"></ion-toggle></div>
       </ion-label>
     </ion-item>
     <!--Next row-->
     <ion-item>
+      <ion-icon name="notifications-off-outline" color="primary"></ion-icon>
       <ion-label class="address-line">
+        
         <div class="name">Не телефонувати</div>
         <div class="check"><ion-toggle aria-label="" (ionChange)="noCall()" [checked]="is_no_call"></ion-toggle></div>
       </ion-label>
     </ion-item>
     <!--Next row-->
     <ion-item *ngIf="zastava_status == true">
+      <ion-icon name="sync-outline" color="primary"></ion-icon>
       <ion-label>
+        
         <div class="address-line">
+         
         <div class="name">{{ zastava_data.title }}
           <br><small (click)="zastavaModalStatus(true)" class="text-primary">Дізнатись більше</small></div>
         <div class="check"><ion-toggle aria-label="" (ionChange)="zastavaTrigger()" [checked]="is_zastava"></ion-toggle></div>
@@ -155,7 +170,7 @@
 
     <ion-item>
       <ion-label>
-        <ion-button [disabled]="disablePaymentButton" (click)="processPayment()" expand="full">Оформити замовлення <ion-icon name="checkmark-circle-outline"></ion-icon></ion-button>
+        <ion-button [disabled]="disablePaymentButton" (click)="processPayment()" expand="full" shape="round" size="default">Оформити замовлення <ion-icon name="checkmark-circle-outline"></ion-icon></ion-button>
       </ion-label>
     </ion-item>
     </ion-list>
