--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -5,7 +5,7 @@
     <ion-card-content>
       <h4>Ви накопичили: <b>{{count_liters}}</b> бонусних літрів</h4>
      <ion-progress-bar [value]="progress_ll"></ion-progress-bar>
-     <p>*до наступного бонусного літру вам потрібно купити {{to_next_l}} літрів очищеної води</p>
+     <small>*до наступного бонусного літру потрібно придбати <b>{{to_next_l}}</b> літрів очищеної води</small>
     </ion-card-content>
   </ion-card>
   </div>
