--- a/src/app/account-orders/account-orders.page.html
+++ b/src/app/account-orders/account-orders.page.html
@@ -28,8 +28,8 @@
         <ion-header>
           <ion-toolbar>
             <ion-title>{{modal_title}}</ion-title>
-            <ion-buttons slot="end">
-              <ion-button (click)="hideModalOrder()">Закрити</ion-button>
+            <ion-buttons slot="start">
+              <ion-button (click)="hideModalOrder()"><ion-icon name="chevron-back-outline"></ion-icon></ion-button>
             </ion-buttons>
           </ion-toolbar>
         </ion-header>
