--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -58,7 +58,7 @@
         <div class="empty-products" *ngIf="showEmptyMsg == true">
 <ion-icon name="search-circle-outline"></ion-icon>
           В цій категорії ще немає товарів...</div>
-        <ion-col *ngIf="!products.length && showEmptyMsg == false" size="12">
+        <ion-col *ngIf="!products && showEmptyMsg == false" size="12">
           <ion-card class="product-items">
 
               <ion-row class="product-item">
