--- a/src/app/account-address/account-address.page.html
+++ b/src/app/account-address/account-address.page.html
@@ -38,8 +38,8 @@
         <ion-header>
           <ion-toolbar>
             <ion-title>{{modal_title}}</ion-title>
-            <ion-buttons slot="end">
-              <ion-button (click)="addressModalHide()">Скасувати</ion-button>
+            <ion-buttons slot="start">
+              <ion-button (click)="addressModalHide()"><ion-icon name="chevron-back-outline"></ion-icon></ion-button>
             </ion-buttons>
           </ion-toolbar>
         </ion-header>
