--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -2,7 +2,12 @@
   <ion-refresher slot="fixed" (ionRefresh)="handleRefresh($event)">
      <ion-refresher-content></ion-refresher-content>
    </ion-refresher>
-
+   <ion-header  class="ion-no-border ">
+    <ion-toolbar >    
+          <img alt="logo" class="img-pad"  id="header_logo" height="40" slot="start" src="assets/logo-bg.png">
+          <ion-icon slot="end" class="img-pad icon-notif" name="notifications-outline"></ion-icon>
+    </ion-toolbar>
+  </ion-header>
   <ion-content class="ion-padding">
 	<section class="top-slider">
   <swiper-container pagination="true" navigation="false" autoplay="2000" loop="true" effect="fade">
