--- a/src/app/tab1/tab1.page.scss
+++ b/src/app/tab1/tab1.page.scss
@@ -127,3 +127,10 @@ ion-card.home_text{
 .bottles-img ion-icon.md.hydrated:first-child {
     font-size: 30px;
 }
+.img-pad {
+    margin: 0 1em;
+}
+.icon-notif {
+    font-size: 22px;
+    color: #3880ff;
+}
