--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -27,9 +27,9 @@
     <div class="bottles-img"><img height="30"  src="assets/bottle-icon.png"> <b>{{bonuses_boutles}}</b> бутелів <ion-icon name="alert-circle-outline" (click)="openmyBottModal()"></ion-icon></div>
     <div class="bottles-img"><ion-icon name="water-outline"></ion-icon> <b>{{bonuses_liters}}</b> літрів <ion-icon name="alert-circle-outline" (click)="openmyLitModal()"></ion-icon></div>
     </div>
-    <ion-card-header>
-    <ion-card-title class="ion-text-center">До наступного бонусу</ion-card-title>
-  </ion-card-header>
+    
+    <h6 class="ion-text-center">До наступного бонусу</h6>
+  
     <div class="bottles">
 <div class="bottles-svg">
 <svg [attr.class]="svg_class" viewbox="0 0 33.83098862 33.83098862" width="150" height="150" xmlns="http://www.w3.org/2000/svg">
